tests/baselines/reference/parserConstructorDeclaration8.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ConstructorDeclarations/parserConstructorDeclaration8.ts (2 errors) ====
    class C {
      // Not a constructor
      public constructor;
                        ~
!!! error TS1005: '(' expected.
      ~~~~~~~~~~~~~~~~~~~
!!! error TS2390: Constructor implementation is missing.
    }